<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login">

    <TextView
        android:layout_width="234dp"
        android:layout_height="66dp"
        android:text="@string/RegisterP"
        android:textSize="24sp"
        android:padding="18dp"
        android:textStyle="bold"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/rule"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="125dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Account"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:hint="@string/Account_hint"
            style="@style/et_AP"
            android:inputType="text">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:hint="@string/Password_hint"
            style="@style/et_AP"
            android:inputType="numberPassword">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password_again"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_passwordConfirm"
            android:layout_width="match_parent"
            android:hint="@string/Password_again_hint"
            style="@style/et_AP"
            android:inputType="numberPassword">

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/btn_LR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:text="@string/Register">

    </Button>

    <TextView
        android:id="@+id/tv_AhAbtL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/Back_to_log"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        >
    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_register_back"
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:layout_gravity="end|bottom"
            android:background="@drawable/btn_back">
        </Button>
    </FrameLayout>

</LinearLayout>